--- a/src/index.m.css
+++ b/src/index.m.css
@@ -65,7 +65,7 @@ footer {
 h1 {
     margin: 0.5rem;
     padding: 0.5rem;
-    font-size: 4.6rem;
+    font-size: 3.6rem;
     text-transform: uppercase;
 }
 /* h2 {
@@ -223,9 +223,9 @@ details {
     max-width: 1440px;
 }
 .main {
-    height: 60vh;
+    /* height: 60vh; */
     display: flex;
-    min-height: 400px;
+    min-height: 60vh;
     justify-content: center;
     color: rgb(var(--black));
     background-position: center;
@@ -241,6 +241,7 @@ details {
     font-size: clamp(1rem, 2.5vw, 2rem);
 }
 .gradient {
+    min-height: 60vh;
     width: 100%;
     height: 100%;
     display: flex;
@@ -249,7 +250,7 @@ details {
     background: linear-gradient(var(--gradient));
 }
 .gradient > div {
-    margin-top: 6rem;
+    margin-top: 9rem;
     text-align: center;
 }
 .gradient > div h2 {
@@ -531,14 +532,14 @@ iframe {
     .profile-wrap img {
         max-width: none;
     }
-    .main {
+    /* .main {
         height: 70vh;
-    }
+    } */
 }
 @media screen and (max-height: 600px) {
-    .main {
+    /* .main {
         height: 70vh;
-    }
+    } */
     .logo-solid {
         max-height: 6rem;
     }
