--- a/src/index.m.css
+++ b/src/index.m.css
@@ -584,6 +584,63 @@ iframe {
     box-shadow: 0 0 6px 3px rgba(0,0,0,0.1);
     background: rgba(var(--share-background));
 }
+.card {
+        margin: 1rem 0;
+        color: white;
+        /* max-width: 500px; */
+        /* min-height: 650px; */
+        border-radius: 6px;
+        background-color: rgb(var(--blue));
+    }
+    .card a {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        flex-direction: column;
+    }
+    .card:hover {
+        box-shadow: 0px 0px 5px 3px #c7c7c7;
+    }
+    .card a > div:nth-child(2) {
+        margin: 1rem auto;
+    }
+    .card a > div:nth-child(1) {
+        width: 100%;
+        height: 280px;
+        background-position: center;
+    }
+    .card > div {
+        padding: 1rem 0.5rem;
+    }
+    .card button {
+        border: none;
+        padding: 6px;
+        margin: 0 0.5rem;
+        border-radius: 3px;
+        color: rgb(var(--black));
+        background-color: white;
+    }
+    .nav {
+        margin-bottom: 2rem;
+    }
+    .nav > button {
+        border: none;
+        margin: 0.5rem;
+        padding: 0.6rem;
+        font-size: 1rem;
+        font-weight: 100;
+        text-transform: capitalize;
+    }
+    .nav > button:nth-child(1) {
+        border-right: 1px solid black;
+    }
+    .nav > button:hover {
+        cursor: pointer;
+        background-color: rgba(var(--muted));
+    }
+    .nav > button.active {
+        background-color: rgba(var(--muted));
+    }
 @media screen and (max-width: 1000px) {
     /* .main h1 {
         font-size: 2.3rem;
